--- a/Daily_UI_Challenge_001/signup.html
+++ b/Daily_UI_Challenge_001/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Sign Up</title>
 </head>
 <body>
@@ -19,8 +20,21 @@
         </div>
         <div class="card-bottom">
             <a href="#">Forgot Password?</a>
+            <h3 class="mb-0">OR</h3>
+            <h3 class="mt-0">Login with</h3>
+        </div>
+        <div class="footer-card">         
+            <a href="www.google.com"><i aria-hidden="true" class="fa fa-google"></i></a>
+            <a href="www.facebook.com"><i aria-hidden="true" class="fa fa-facebook-square"></i></a>
+            <a href="www.github.com"><i aria-hidden="true" class="fa fa-github"></i></a>
+            <a href="www.linkedin.com"><i aria-hidden="true" class="fa fa-linkedin-square"></i></a>
+            <a href="www.pinterest.com"><i aria-hidden="true" class="fa fa-pinterest"></i></a>
+        </div>
+        <div class="bottom">            
+            <p>Already have an Account?<a href="#">Login here</a></p>
         </div>
     </div>
+
     
 </body>
 </html>
